Implement parameters in SimB